<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>servicelib</groupId>
    <artifactId>servicelib</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
      <scala-library.version>2.10.3</scala-library.version>
    </properties>

      <dependencies>
        <dependency>
          <groupId>org.scala-lang</groupId>
          <artifactId>scala-library</artifactId>
          <version>${scala-library.version}</version>
          <scope>compile</scope>
        </dependency>

        <dependency>
          <groupId>com.twitter</groupId>
          <artifactId>finatra_2.10</artifactId>
          <version>1.5.3</version>
        </dependency>

        <!-- Ensure that Kiji, Hadoop and HBase dependencies are provided,
          otherwise, when we package, we run into things like
          "Error parsing flags: PermGen space"-->
        <dependency>
          <groupId>org.kiji.schema</groupId>
          <artifactId>kiji-schema</artifactId>
          <version>1.4.0</version>
          <scope>provided</scope>
          <exclusions>
            <exclusion>
              <groupId>io.netty</groupId>
              <artifactId>netty</artifactId>
            </exclusion>
          </exclusions>
        </dependency>

        <dependency>
          <groupId>org.apache.hbase</groupId>
          <artifactId>hbase</artifactId>
          <version>0.94.6-cdh4.3.0</version>
          <scope>provided</scope>
          <exclusions>
            <exclusion>
              <groupId>asm</groupId>
              <artifactId>asm</artifactId>
            </exclusion>
          </exclusions>
        </dependency>

        <dependency>
          <groupId>org.kiji.express</groupId>
          <artifactId>kiji-express</artifactId>
          <version>2.0.0</version>
          <scope>provided</scope>
        </dependency>

        <dependency>
          <groupId>org.apache.avro</groupId>
          <artifactId>avro</artifactId>
          <version>1.7.5</version>
        </dependency>

        <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>4.8.1</version>
          <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
          <!--plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>2.3.1</version>
            <configuration>
              <archive>
                <manifest>
                  <mainClass>Music</mainClass>
                  <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                  <addClasspath>true</addClasspath>
                  <classpathPrefix>lib/</classpathPrefix>
                </manifest>
              </archive>
            </configuration>
          </plugin-->

          <plugin>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>2.3</version>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
            </configuration>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>copy-dependencies</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro-maven-plugin</artifactId>
            <version>1.7.5</version>
            <configuration>
              <!-- Avro string compiled to java.lang.String instead of CharSequence -->
              <stringType>String</stringType>
            </configuration>
            <executions>
              <execution>
                <phase>generate-sources</phase>
                <goals>
                  <goal>schema</goal>
                  <goal>idl-protocol</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>2.3.2</version>
            <configuration>
              <source>1.6</source>
              <target>1.6</target>
            </configuration>
          </plugin>

          <plugin>
            <groupId>com.google.code.maven-replacer-plugin</groupId>
            <artifactId>maven-replacer-plugin</artifactId>
            <version>1.3.8</version>
            <configuration>
              <!-- Use a regex replace to suppress java compiler warnings
                   in the generated code.  What a hack, eh? -->
              <basedir>${basedir}</basedir>
            </configuration>
            <executions>
              <execution>
                <!--
                    In all projects, if you generate avro code, then it should have the following
                    replacement regex run on it.
                -->
                <id>suppress-avro-warnings</id>
                <phase>process-sources</phase>
                <goals>
                  <goal>replace</goal>
                </goals>
                <configuration>
                  <includes>
                    <!-- This is a relative path because the plugin prefixes ${basedir} for us. -->
                    <include>target/generated-sources/avro/**/*.java</include>
                    <include>target/generated-test-sources/avro/**/*.java</include>
                  </includes>
                  <regex>false</regex>
                  <replacements>
                    <!-- This is a temporary fix until AVRO-1047 is resolved. -->
                    <replacement>
                      <token>@SuppressWarnings("all")</token>
                      <value>@SuppressWarnings("unchecked")</value>
                    </replacement>
                  </replacements>
                </configuration>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>net.alchim31.maven</groupId>
            <artifactId>scala-maven-plugin</artifactId>
            <version>3.1.6</version>
            <executions>
              <execution>
                <id>compilation</id>
                <goals>
                  <goal>compile</goal>
                  <goal>testCompile</goal>
                </goals>
                <configuration>
                  <args>
                    <arg>-unchecked</arg>
                    <arg>-deprecation</arg>
                  </args>
                  <sendJavaToScalac>true</sendJavaToScalac>
                  <jvmArgs>
                    <!-- Fixes the build on OS X based computers. -->
                    <jvmArg>-Xmx2G</jvmArg>
                  </jvmArgs>
                  <!-- Fixes warnings from multiple scala version checks against scala 2.10. -->
                  <scalaCompatVersion>2.10</scalaCompatVersion>
                </configuration>
            </execution>
            </executions>
          </plugin>

          <!-- ScalaTest -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <argLine>-Xmx2G -XX:MaxPermSize=512m</argLine>
              <includes>
                <include>**/*Suite.scala</include>
                <include>%regex[.*/.*Suite.class]</include>
              </includes>
              <forkMode>once</forkMode>
            </configuration>
          </plugin>
        </plugins>
    </build>
    <repositories>
      <repository>
        <id>kiji-repos</id>
        <name>kiji-repos</name>
        <url>https://repo.wibidata.com/artifactory/kiji</url>
      </repository>
    </repositories>
</project>
